--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
           go-version: "1.23.0"
 
       - name: Print version of Go
-        run: (go version)
+        run: (go test ./...)
 
