CH6-L6 (repaste buildprod)

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "1.23.0"
       
+      - name: Build the application
+        run: (./scripts/buildprod.sh)
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -27,6 +30,5 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v2'
         with:
           version: '>= 512.0.0'
-    
       - name: Build the application
         run: (gcloud builds submit --tag us-central1-docker.pkg.dev/notely-452407/notely-ar-repo/notely:latest .)
