--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Check out code
@@ -30,8 +32,15 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v2'
         with:
           version: '>= 512.0.0'
+      
       - name: Build the application
         run: (gcloud builds submit --tag us-central1-docker.pkg.dev/notely-452407/notely-ar-repo/notely:latest .)
-      
+
+      - name: Install goose
+        run: (go install github.com/pressly/goose/v3/cmd/goose@latest)
+
+      - name: Run DB migrations
+        run: (./scripts/migrateup.sh)
+
       - name: Deploy to Cloud Run
         run: (gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-452407/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-452407 --max-instances=4)
